--- a/templates/signup.html
+++ b/templates/signup.html
@@ -49,7 +49,7 @@
             
             <div class="row">
               <div class="col-sm-offset-6 col-sm-6">
-                <input type="submit" name="Envoyer"/>
+                <input type="submit" class='btn btn-primary btn-sm' name="Envoyer"/>
                 </div>
             </div>
           </div>
