--- a/templates/compte.html
+++ b/templates/compte.html
@@ -4,7 +4,8 @@
         <title>Connexion Calendrier</title>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="style/cadre.css" type="text/css" />
-        {% include 'include/biblio.html' %}
+        <link rel="stylesheet" href="style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
+        <link rel="stylesheet" href="style/navigation.css" type="text/css" />
 
     </head>
     
@@ -39,6 +40,16 @@
                 <div class="row">
                     <div class="col-sm-6">Pseudo :</div>  
                     <div class="col-sm-6"> {{ app.session.get('login') }} </div> 
+                </div>
+                
+                <div class="row">
+                    <div class="col-sm-6">Date de creation :</div>  
+                    <div class="col-sm-6"> {{ app.session.get('date_create') }} </div> 
+                </div>
+                
+                <div class="row">
+                    <div class="col-sm-6">Dernierre connexion :</div>  
+                    <div class="col-sm-6"> {{ app.session.get('lastco') }} </div> 
                 </div>
           
           
@@ -112,7 +123,7 @@
                                                 <input type="password" name="password3" />
                                             </p>
                                             <p>
-                                                <input type="submit" name="Submit" value="Submit" />
+                                                <input class="btn btn-primary btn-sm" type="submit" name="Submit" value="Chhanger" />
                                             </p>
                                 </form>
                                                     ' data-placement="top" data-original-title="Changement de mot de passe">Changer mot de passe</a>
@@ -135,8 +146,11 @@
         
       
   </div>
-
-        <script type="text/javascript" src="script/compte.js"></script>
+            <script type="text/javascript" src="script/jquery-2.1.3.min.js"></script>
+            <script type="text/javascript" src="script/bootstrap-tooltip.js"></script>
+            <script type="text/javascript" src="script/bootstrap-popover.js"></script>
+            <script type="text/javascript" src="style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
+            <script type="text/javascript" src="script/compte.js"></script>
         
         
     </body>
