correction popover + gestion des erreurs

--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -9,7 +9,6 @@
         
         
         <link rel="stylesheet" href="style/calendrier.css" type="text/css" />
-        {% include 'include/biblio.html' %}
             
                 
                 
@@ -134,8 +133,9 @@
     <script type="text/javascript" src="script/bootstrap-popover.js"></script>
     <script type="text/javascript" src="style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
     <script src="style/bootstrap-3.3.4-dist/js/bootstrap-dialog.js"></script>    
-            
+      <script type="text/javascript" src="script/erreur.js"></script>
     <script type="text/javascript" src="script/calendrier.js"></script>
+    
         
     </body>
 </html>
