--- a/templates/compte.html
+++ b/templates/compte.html
@@ -150,6 +150,7 @@
             <script type="text/javascript" src="script/bootstrap-tooltip.js"></script>
             <script type="text/javascript" src="script/bootstrap-popover.js"></script>
             <script type="text/javascript" src="style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
+            <script type="text/javascript" src="script/erreur.js"></script>
             <script type="text/javascript" src="script/compte.js"></script>
         
         
