--- a/templates/administration.html
+++ b/templates/administration.html
@@ -20,7 +20,7 @@
       <div class="row">
           <div class="col-sm-offset-3 col-sm-7">
                 <div class="row" id="listeutilisateur">
-                    <div class="col-sm-offset-1 col-sm-11" >
+                    <div class="col-sm-offset-3 col-sm-9" >
                         <table id="enter">
                             <tr>
                                 <td>
@@ -76,6 +76,7 @@
   
   
   </div>
+        <script type="text/javascript" src="script/erreur.js"></script>
         <script type="text/javascript" src="script/administration.js"></script>
     
     </body>
