--- a/templates/signup.html
+++ b/templates/signup.html
@@ -75,6 +75,6 @@
         
         
         
-        
+        <script type="text/javascript" src="script/erreur.js"></script>
     </body>
 </html>
