--- a/templates/administration.html
+++ b/templates/administration.html
@@ -3,9 +3,9 @@
     <head>
         <title>Connexion Calendrier</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="style/administration.css" type="text/css" />
-        <link rel="stylesheet" href="style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
-        <link rel="stylesheet" href="style/navigation.css" type="text/css" />
+        <link rel="stylesheet" href="../style/administration.css" type="text/css" />
+        <link rel="stylesheet" href="../style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
+        <link rel="stylesheet" href="../style/navigation.css" type="text/css" />
 
     </head>
     
@@ -76,8 +76,8 @@
   
   
   </div>
-        <script type="text/javascript" src="script/erreur.js"></script>
-        <script type="text/javascript" src="script/administration.js"></script>
+        <script type="text/javascript" src="../script/erreur.js"></script>
+        <script type="text/javascript" src="../script/administration.js"></script>
     
     </body>
 </html>
