--- a/templates/compte.html
+++ b/templates/compte.html
@@ -3,9 +3,9 @@
     <head>
         <title>Connexion Calendrier</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="style/cadre.css" type="text/css" />
-        <link rel="stylesheet" href="style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
-        <link rel="stylesheet" href="style/navigation.css" type="text/css" />
+        <link rel="stylesheet" href="../style/cadre.css" type="text/css" />
+        <link rel="stylesheet" href="../style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
+        <link rel="stylesheet" href="../style/navigation.css" type="text/css" />
 
     </head>
     
@@ -123,7 +123,7 @@
                                                 <input type="password" name="password3" />
                                             </p>
                                             <p>
-                                                <input class="btn btn-primary btn-sm" type="submit" name="Submit" value="Chhanger" />
+                                                <input class="btn btn-primary btn-sm" type="submit" name="Submit" value="Changer" />
                                             </p>
                                 </form>
                                                     ' data-placement="top" data-original-title="Changement de mot de passe">Changer mot de passe</a>
@@ -146,12 +146,12 @@
         
       
   </div>
-            <script type="text/javascript" src="script/jquery-2.1.3.min.js"></script>
-            <script type="text/javascript" src="script/bootstrap-tooltip.js"></script>
-            <script type="text/javascript" src="script/bootstrap-popover.js"></script>
-            <script type="text/javascript" src="style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
-            <script type="text/javascript" src="script/erreur.js"></script>
-            <script type="text/javascript" src="script/compte.js"></script>
+            <script type="text/javascript" src="../script/jquery-2.1.3.min.js"></script>
+            <script type="text/javascript" src="../script/bootstrap-tooltip.js"></script>
+            <script type="text/javascript" src="../script/bootstrap-popover.js"></script>
+            <script type="text/javascript" src="../style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
+            <script type="text/javascript" src="../script/erreur.js"></script>
+            <script type="text/javascript" src="../script/compte.js"></script>
         
         
     </body>
