--- a/templates/propos.html
+++ b/templates/propos.html
@@ -3,9 +3,9 @@
     <head>
         <title>Connexion Calendrier</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="style/cadre.css" type="text/css" />
-        <link rel="stylesheet" href="style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
-        <link rel="stylesheet" href="style/navigation.css" type="text/css" />
+        <link rel="stylesheet" href="../style/cadre.css" type="text/css" />
+        <link rel="stylesheet" href="../style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
+        <link rel="stylesheet" href="../style/navigation.css" type="text/css" />
     </head>
     
     
