--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,9 +3,9 @@
     <head>
         <title>Connexion Calendrier</title>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="style/cadre.css" type="text/css" />
-        <link rel="stylesheet" href="style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
-        <link rel="stylesheet" href="style/navigation.css" type="text/css" />
+        <link rel="stylesheet" href="../style/cadre.css" type="text/css" />
+        <link rel="stylesheet" href="../style/bootstrap-3.3.4-dist/css/bootstrap.css" type="text/css" />
+        <link rel="stylesheet" href="../style/navigation.css" type="text/css" />
     </head>
     
     
@@ -16,7 +16,7 @@
     
   <div class="container">
     
-    <form  method="POST" action="/signup">
+    <form  method="POST" action="/calendrier/signup">
 
       <div class="row">
         <div class="col-sm-offset-4 col-sm-5 formulaire">
@@ -75,6 +75,6 @@
         
         
         
-        <script type="text/javascript" src="script/erreur.js"></script>
+        <script type="text/javascript" src="../script/erreur.js"></script>
     </body>
 </html>
