--- a/templates/administration.html
+++ b/templates/administration.html
@@ -31,7 +31,7 @@
                             </td>
                             <td>
                                 
-                            <select name="niveau" id="niveau">
+                            <select class="form-control" name="niveau" id="niveau">
                                 <option value="-1" selected >*</option>
                                 <option value="2">Admin</option>
                                 <option value="1">Normal</option>
