--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -38,7 +38,7 @@
                 </div>
                 
                 <div class="col-sm-offset-3 col-sm-3">
-                  semaine du :<select id="choix_semaine"></select>
+                  semaine du :<select class="form-control" id="choix_semaine"></select>
           
                 </div>
                 
@@ -134,27 +134,14 @@
     
     
     
-          <script type="text/javascript" src="script/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="script/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="script/bootstrap-tooltip.js"></script>
     <script type="text/javascript" src="script/bootstrap-popover.js"></script>
     <script type="text/javascript" src="style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
     <script src="style/bootstrap-3.3.4-dist/js/bootstrap-dialog.js"></script>    
-      <script type="text/javascript" src="script/erreur.js"></script>
+    <script type="text/javascript" src="script/erreur.js"></script>
     <script type="text/javascript" src="script/calendrier.js"></script>
-    
-    
-    
-    
-    <!--
-    
-    <script type="text/javascript" src="../script/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="../script/bootstrap-tooltip.js"></script>
-    <script type="text/javascript" src="../script/bootstrap-popover.js"></script>
-    <script type="text/javascript" src="../style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
-    <script src="../style/bootstrap-3.3.4-dist/js/bootstrap-dialog.js"></script>    
-      <script type="text/javascript" src="../script/erreur.js"></script>
-    <script type="text/javascript" src="../script/calendrier.js"></script>
-    -->
+
         
     </body>
 </html>
