--- a/templates/propos.html
+++ b/templates/propos.html
@@ -84,6 +84,18 @@
                         <span class='reponse'>Projet AWS - M1 INFO </span>
                     </div>  
                 </div>
+                
+                
+                <div class="row">
+                    <div class="col-sm-6">
+                        <span class='question'> Code source:</span>
+                    </div>  
+                </div>
+                <div class="row">
+                    <div class="col-sm-offset-2 col-sm-6">
+                        <span class='reponse'> <b>www.github.com/kibadex/calendrier</b </span>
+                    </div>  
+                </div>
           
          
         </div>
