--- a/templates/administration.html
+++ b/templates/administration.html
@@ -42,7 +42,7 @@
                         <button type="button" class="btn btn-default btn-sm" id="r_update"> <div class="glyphicon glyphicon-wrench"></div> </button>
                         <button type="button" class="btn btn-default btn-sm" id="r_delete"><div class="glyphicon glyphicon-remove"></div></button>
                         
-                        <button class="btn btn-primary btn-sm" id="lance_recherche" ><span class="glyphicon glyphicon-search"></span> Recercher</button>
+                        <button class="btn btn-primary btn-sm" id="lance_recherche" ><span class="glyphicon glyphicon-search"></span> Rechercher</button>
                        </td>
                        </tr>
                        </table>
