--- a/templates/signup.html
+++ b/templates/signup.html
@@ -76,7 +76,7 @@
   </div>
         
         
-        
+        <script type="text/javascript" src="../script/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="../script/erreur.js"></script>
     </body>
 </html>
