--- a/templates/propos.html
+++ b/templates/propos.html
@@ -43,7 +43,10 @@
                 <div class="row">
                     <div class="col-sm-offset-2 col-sm-10">
                         <span class='reponse'>Basri Mohamed    <a HREF="mailto:basrimohamed@live.fr">Envoyer un mail</a></span><br/>
-                    </div>  
+                    </div>
+                <div class="col-sm-offset-2 col-sm-10">
+                        <span class='reponse'>Imene Zemmouri    <a HREF="mailto:imenezemmouri@hotmail.fr">Envoyer un mail</a></span><br/>
+                    </div>
                 </div>
                 
                 
