--- a/templates/administration.html
+++ b/templates/administration.html
@@ -20,7 +20,7 @@
       <div class="row">
           <div class="col-sm-offset-3 col-sm-7">
                 <div class="row" id="listeutilisateur">
-                    <div class="col-sm-offset-3 col-sm-9" >
+                    <div class="col-sm-offset-2 col-sm-10" >
                         <table id="enter">
                             <tr>
                                 <td>
@@ -76,6 +76,9 @@
   
   
   </div>
+        <script type="text/javascript" src="../script/jquery-2.1.3.min.js"></script>
+        <script type="text/javascript" src="../style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
+        <script src="../style/bootstrap-3.3.4-dist/js/bootstrap-dialog.js"></script>   
         <script type="text/javascript" src="../script/erreur.js"></script>
         <script type="text/javascript" src="../script/administration.js"></script>
     
