--- a/templates/administration.html
+++ b/templates/administration.html
@@ -17,8 +17,8 @@
     
   <div class="container">
     
-      <div class="row">
-          <div class="col-sm-offset-3 col-sm-7">
+        <div class="row">
+            <div class="col-sm-offset-3 col-sm-7">
                 <div class="row" id="listeutilisateur">
                     <div class="col-sm-offset-2 col-sm-10" >
                         <table id="enter">
@@ -48,28 +48,28 @@
                        </table>
                     </div>
                 
-                      <div  id="tableau" >
+                      <div  id="tableau">
 
                       </div> 
-                      <p>
-                              <div class="glyphicon glyphicon-pencil savoir">Creation</div> 
-                              <div class="glyphicon glyphicon-wrench savoir">Modification</div>
-                              <div class="glyphicon glyphicon-remove savoir">Suppression</div><br>
-                          <button type="button" class="btn btn-default btn-sm savoir">*</button>tous les utilisateurs. 
-                          <button type="button" class="btn btn-success btn-sm savoir">*</button>Utilisateurs qui n'ont pas le droit <br>
-                          <button type="button" class="btn btn-warning btn-sm savoir">*</button>Utilisateurs qui demande le droit 
-                          <button type="button" class="btn btn-danger btn-sm savoir">*</button>Utilisateurs qui possede de droit <br>
-                          <span class='rond'> <input type="checkbox" disabled></span>Ce que veut l'utilisateur.
-                      </p>
+                        <p>
+                            <div class="glyphicon glyphicon-pencil savoir">Creation</div> 
+                            <div class="glyphicon glyphicon-wrench savoir">Modification</div>
+                            <div class="glyphicon glyphicon-remove savoir">Suppression</div><br>
+                            <button type="button" class="btn btn-default btn-sm savoir">*</button>tous les utilisateurs. 
+                            <button type="button" class="btn btn-success btn-sm savoir">*</button>Utilisateurs qui n'ont pas le droit <br>
+                            <button type="button" class="btn btn-warning btn-sm savoir">*</button>Utilisateurs qui demande le droit 
+                            <button type="button" class="btn btn-danger btn-sm savoir">*</button>Utilisateurs qui possede de droit <br>
+                            <span class='rond'> <input type="checkbox" disabled></span>Ce que veut l'utilisateur.
+                        </p>
                       
                
                     
                 </div>  
 
-          </div>
+            </div>
           
           
-      </div>
+        </div>
   
   
  
@@ -78,7 +78,7 @@
   </div>
         <script type="text/javascript" src="../script/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="../style/bootstrap-3.3.4-dist/js/bootstrap.min.js"> </script>
-        <script src="../style/bootstrap-3.3.4-dist/js/bootstrap-dialog.js"></script>   
+        <script type="text/javascript" src="../style/bootstrap-3.3.4-dist/js/bootstrap-dialog.js"></script>   
         <script type="text/javascript" src="../script/erreur.js"></script>
         <script type="text/javascript" src="../script/administration.js"></script>
     
