--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,7 +27,7 @@
           
           <div class="row">
             <div class="col-sm-6">Pseudo :</div>  
-            <div class="col-sm-6"> <input type="text" name="login" required/> </div> 
+            <div class="col-sm-6"> <input type="text" name="login" pattern="^([a-z]|[A-Z])([a-z]|[A-Z]|[0-9]){2,10}$" title="minimum 3 caractéres" required/> </div> 
           </div>
           
           <div class="row">
