--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -73,11 +73,11 @@
                   <table>
                         <tr>
                           <th>Debut de l'evenement:</th>
-                          <td>  <span id="debut_evenement" ></span> <a id="up_hours" class='glyphicon glyphicon-chevron-up'></a>  </td>
+                          <td>  <span id="debut_evenement"></span>   </td>
                         </tr>
                         <tr>
                           <th>Fin de l'evenement:</th>
-                          <td>  <span id="fin_evenement" ></span> <a id="down_hours" class='glyphicon glyphicon-chevron-down'></a> </td>
+                          <td>  <span id="fin_evenement"></span>  </td>
                         </tr>
                         <tr>
                           <th>Titre de l'evenement:</th>
