--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -58,7 +58,7 @@
             
             
             
-    <div class="modal fade" id="formulaire">
+    <div class="modal fade"> <!--  -->
         <div class="modal-dialog">
           <div class="modal-content">
             
@@ -98,7 +98,7 @@
                   <input type="hidden" id="id_event" name="id_event" value="-1"/>
                   <input type="hidden" id="creator" name="creator" value=""/>
                   <input type="hidden" id="type" name="type" value=""/>
-                  <input type="hidden" id="calendrier" name="calendrier" value="{{ calendrier }}"/>
+       <!-- -->      <input type="hidden" name="calendrier" value="{{ calendrier }}"/>
                   <input type="hidden" id="time" name="time" value="{{ time }}"/>
                   <input type="hidden" id="date_debut_evenement" name="date_debut_evenement" value=""/>
                   <input type="hidden" id="date_fin_evenement" name="date_fin_evenement" value=""/>
