--- a/templates/propos.html
+++ b/templates/propos.html
@@ -94,7 +94,7 @@
                 
                 <div class="row">
                     <div class="col-sm-offset-2 col-sm-8">
-                        <span class='reponse'> <b> <a href='https://github.com/kibadex/calendrier' target="_blank" >www.github.com/kibadex/calendrier </a></b </span>
+                        <span class='reponse'> <b> <a href='https://github.com/kibadex/calendrier' target="_blank" >www.github.com/kibadex/calendrier </a></b> </span>
                     </div>  
                 </div>
           
